--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,8 @@
 :root {
-    --bg: black;
-    --bghead: lightblue;
-    --maintext: lightblue;
-    --hovertext: darkblue;
-    --headertext: purple;
+    --bg: #112351;
+    --maintext: #9AB6E8;
+    --hovertext: #0182E7;
+    --headertext:#0762B3;
     --highlight: white;
     --border: solid 2px white
 }
@@ -12,27 +11,54 @@ body {
     background-color: var(--bg);
 }
 
-header {
+ header nav ul{
+    display:flex;
+    justify-content: center;
+   
+    list-style: none;
+ }
 
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: var(--bghead);
-    color: var(--headertext);
-
-}
-
-#main {
-    width: 100px;
-    height: 100px;
-    border-radius: 100%;
-    border: white 2px solid;
-}
-
-
+ header nav ul li {
+    margin-left: 3vw;
+    
+ }
+ a {
+    text-decoration: none;
+    color: var(--maintext);
+ }
 .navigate-page {
-    float: right;
-    padding-top: 30px;
-    margin-right: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
+}
+#about{
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    margin-top: 5vh;
+
+}
+p {
+    color:var(--maintext);
+    width: 50vw;
+    line-height: 1.5;
+    margin-top: 5vh;
+}
+footer{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.social{
+    margin-top: 5vh;
+    display: flex;
+    justify-content:space-evenly
+}
+a i, h6 {
+    color: var(--maintext);
+
+}
+h6{
+    font-size: 1.2rem;
+    text-align: center;
 }
