--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
     --bg: #112351;
     --maintext: #9AB6E8;
     --hovertext: #0182E7;
-    --headertext:#0762B3;
+    --headertext: #0762B3;
     --highlight: white;
     --border: solid 2px white
 }
@@ -11,54 +11,118 @@ body {
     background-color: var(--bg);
 }
 
- header nav ul{
-    display:flex;
+header nav ul {
+    display: flex;
     justify-content: center;
-   
-    list-style: none;
- }
 
- header nav ul li {
+    list-style: none;
+}
+
+header nav ul li {
     margin-left: 3vw;
-    
- }
- a {
+
+}
+
+a {
     text-decoration: none;
     color: var(--maintext);
- }
+}
+
 .navigate-page {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-#about{
+
+h2 {
+
+    color: var(--maintext);
+    text-align: center;
+
+}
+
+#about {
     display: flex;
     gap: 50px;
     justify-content: center;
     margin-top: 5vh;
-
 }
+
 p {
-    color:var(--maintext);
-    width: 50vw;
+    color: var(--maintext);
+    width: 70vw;
     line-height: 1.5;
     margin-top: 5vh;
 }
-footer{
-    display:flex;
+
+
+.work {
+
+    width: 90%;
+    margin: 2rem auto;
+}
+
+
+card {
+    color: var(--maintext);
+}
+
+.workcard {
+    color: var(--maintext);
+    border: var(--border);
+}
+
+h3 {
+    color: var(--maintext);
+    border: var(--border);
+    position: relative;
+    margin: -2rem 0 1rem 0;
+    background-color: var (--bg);
+    text-align: center;
+    padding: 5px;
+    width: 150px;
+    height: 30px;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.column {
+    flex: 1 0 30%;
+    padding: 20px;
+    /*transition: flex-basis 500ms linear;*/
+    margin-bottom: 5vh;
+    margin-left: 3vw;
+}
+
+.column :hover {
+    box-shadow: 0 30px 50px var(--hovertext);
+
+}
+
+
+footer {
+    display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.social{
+.social {
     margin-top: 5vh;
     display: flex;
-    justify-content:space-evenly
+    justify-content: space-evenly
 }
-a i, h6 {
+
+a i,
+h6 {
     color: var(--maintext);
 
 }
-h6{
+
+h6 {
     font-size: 1.2rem;
     text-align: center;
 }
